# mosviz

./: .gitignore  .rtd-environment.yml  .travis.yml  CHANGES.rst  MANIFEST.in  README.rst  appveyor.yml  mosviz_table.ecsv  readthedocs.yml  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  api.rst  conf.py  environment.yml  functionality.rst  get_started.rst  gettingstarted.rst  index.rst  installation.rst  readingindata.rst  rtd-pip-requirements
docs/mosviz/: functionality.rst  index.rst  installation.rst  ipynb.rst  make_rgb.ipynb  readingindata.rst  refapi.rst
docs/mosviz/notebooks/: make_cutouts.ipynb  make_rgb.ipynb
docs/mosviz/notebooks/data/: MOS_8458_G395H-cutouts.txt
mosviz/: __init__.py  _astropy_init.py  app.py  cli.py  compat.py  conftest.py  mosviz_data_factory.py  retired.py  setup_package.py  startup.py
mosviz/controls/: saved_slits.yaml  slit_controller.py  slit_selection_ui.py
mosviz/controls/slits/: rectangle_slit.py  saved_slits.yaml  slit_base.py  slit_controller.py  slit_selection_ui.py
mosviz/controls/tests/: test_slit_controller.py
mosviz/core/: data.py  threads.py
mosviz/data/ui/: cutout_tool.ui  general_cutout_tool.ui  layer_widget.ui  loader_selection.ui  table_gen.ui  table_generator.ui
mosviz/interfaces/: decorators.py  registries.py
mosviz/io/loaders/: generic_loader.py  image_loaders.py  mos_loaders.py  spectrum_loaders.py
mosviz/loaders/: __init__.py  deimos_loaders.py  hst_loaders.py  jwst_loaders.py  loader_selection.py  loader_selection.ui  mos_loaders.py  utils.py
mosviz/loaders/test/: sample_test.py
mosviz/loaders/tests/: test_load_NIRSpec_data.py  test_mos_loaders.py
mosviz/plugins/: __init__.py  cutout_tool.py  data_list_plugin.py  table_gen.py  table_generator.py
mosviz/plugins/cutout_tool/: __init__.py  cutout_lib.py  cutout_tool.py
mosviz/plugins/cutout_tool/tests/: test_cutout_lib.py
mosviz/plugins/cutout_tool/ui/: cutout_tool.ui  general_cutout_tool.ui
mosviz/plugins/table_generator/: __init__.py  nirspec_table.py  nirspec_table_ui.py  table.py  table_generator.py
mosviz/plugins/table_generator/ui/: table_generator.ui
mosviz/tests/: coveragerc  setup_package.py
mosviz/tests/data/: deimos_mosviz.tbl
mosviz/tests/data/cutouts/: 11051203.acs.i_6ac_.fits  11051203.acs.v_6ac_.fits  12004455.acs.i_6ac_.fits  12004455.acs.v_6ac_.fits  12004808.acs.i_6ac_.fits  12004808.acs.v_6ac_.fits  12008179.acs.i_6ac_.fits  12008179.acs.v_6ac_.fits  12008349.acs.i_6ac_.fits  12008349.acs.v_6ac_.fits  12011504.acs.i_6ac_.fits  12011504.acs.v_6ac_.fits  12012573.acs.i_6ac_.fits  12012573.acs.v_6ac_.fits  12012586.acs.i_6ac_.fits  12012586.acs.v_6ac_.fits  12016058.acs.i_6ac_.fits  12016058.acs.v_6ac_.fits  12019653.acs.i_6ac_.fits  12019653.acs.v_6ac_.fits  12019995.acs.i_6ac_.fits  12019995.acs.v_6ac_.fits  12020049.acs.i_6ac_.fits  12020049.acs.v_6ac_.fits  12020067.acs.i_6ac_.fits  12020067.acs.v_6ac_.fits  12020387.acs.i_6ac_.fits  12020387.acs.v_6ac_.fits  12020734.acs.i_6ac_.fits  12020734.acs.v_6ac_.fits  12024118.acs.i_6ac_.fits  12024118.acs.v_6ac_.fits  12024856.acs.i_6ac_.fits  12024856.acs.v_6ac_.fits  13004306.acs.i_6ac_.fits  13004306.acs.v_6ac_.fits  13018671.acs.i_6ac_.fits  13018671.acs.v_6ac_.fits  (+40 more)
mosviz/ui/widgets/: sub_windows.py  windows.py
mosviz/utils/: cutout_tools.py  lupton_rgb.py
mosviz/viewers/: __init__.py  graphs1d.py  graphs2d.py  mos_viewer.py
mosviz/viewers/tests/: test_mos_viewer.py
mosviz/widgets/: __init__.py  layer_widget.py  plots.py  share_axis.py  toolbars.py  viewer_options.py
mosviz/widgets/ui/: mos_widget.ui
(+39 files in other folders)
