[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = mosviz
description = Interactive visualization and analysis of JWST MOS data.
long_description = Interactive visualization and analysis of JWST MOS data.
author = Nick Earl, Ivo Busko
author_email = nearl@stsci.edu
license = BSD
url = http://mosviz.readthedocs.org
edit_on_github = False
github_project = spacetelescope/mosviz

[entry_points]


[glue.plugins]
mosviz=mosviz:setup
