[metadata]
name = mosviz
package_name = mosviz
version = 0.2.0.dev
provides = mosviz
author = JDADF Developers
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
description = MOS visualization tool
long_description = file: README.rst
url = https://github.com/spacetelescope/mosviz
github_project = spacetelescope/mosviz

[options]
packages = find:
zip_safe = False
python_requires = >=3.6
install_requires =
    numpy>=1.16
    astropy>=3.1
    glue-core>=0.13.0
    regions>=0.3
    specviz>=0.6.2
    qtpy

[options.entry_points]
gui_scripts =
    mosviz = mosviz.cli:main

[options.extras_require]
tests = pytest-astropy

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.1
testpaths = mosviz docs
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[pycodestyle]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[glue.plugins]
mosviz=mosviz.__init__:setup
