[metadata]
name = mosviz
package_name = mosviz
provides = mosviz
author = JDADF Developers
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
description = MOS visualization tool
long_description = file: README.rst
url = https://github.com/spacetelescope/mosviz
github_project = spacetelescope/mosviz

[options]
packages = find:
zip_safe = False
python_requires = >=3.6
include_package_data = True
setup_requires = setuptools_scm
install_requires = 
	numpy>=1.16
	astropy>=3.1
	glue-core>=0.14
	regions>=0.3
	specviz>=0.7.0
	qtpy
	pyqt5==5.12.3
	pyqtgraph==0.10.0
	reproject

[options.entry_points]
gui_scripts = 
	mosviz = mosviz.cli:main
glue.plugins = 
	mosviz = mosviz:setup

[options.extras_require]
tests = pytest-astropy

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.1
testpaths = mosviz docs
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[pycodestyle]
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[glue.plugins]
mosviz = mosviz.__init__:setup

[egg_info]
tag_build = 
tag_date = 0

